* Libs version updated. * Removed unused info from AndroidManifest * Added ability to do direct file upload by path and by selection from gallery.

--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ziggeo_rn</string>
+    <string name="internal_storage">Internal storage</string>
 </resources>
